fix: properly right align room code text

--- a/client/src/public/css/custom-multiplayer-intermission-screen.css
+++ b/client/src/public/css/custom-multiplayer-intermission-screen.css
@@ -191,6 +191,7 @@
   bottom: 0;
   right: 0;
   margin: 2px;
+  text-align: right;
 }
 
 #custom-multiplayer-room-indicator-label
